# aula-mcp

./: README.md  __init__.py  aula_calendar.py  client.py  client_example.py  const.py  data_manager.py  llms-full.txt  main.py  mcp_server.py  pyproject.toml  requirements.txt  session_cache.py  setup.py
examples/: config.json
models/: __init__.py  base.py  calendar.py
scripts/: run_server.py
